// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSidebarNav customize 1`] = `
<div>
  <ul
    class="sidebar-nav bazinga"
  >
    Test
  </ul>
</div>
`;

exports[`loads and displays CSidebarNav component 1`] = `
<div>
  <ul
    class="sidebar-nav"
  >
    Test
  </ul>
</div>
`;
